--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.11",
+        "@heroicons/vue": "^2.0.16",
         "@vitejs/plugin-vue": "^4.0.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
