--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "@headlessui/vue": "^1.7.11",
         "@heroicons/vue": "^2.0.16",
         "@vitejs/plugin-vue": "^4.0.0",
+        "flowbite": "^1.6.3",
+        "tw-elements": "^1.0.0-beta1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6"
