--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.11",
         "@heroicons/vue": "^2.0.16",
+        "@intlify/unplugin-vue-i18n": "^0.8.2",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vueuse/core": "^9.13.0",
         "flowbite": "^1.6.3",
+        "pinia": "^2.0.32",
         "tw-elements": "^1.0.0-beta1",
         "vue": "^3.2.36",
+        "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6"
     }
