--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@heroicons/vue": "^2.0.16",
         "@vitejs/plugin-vue": "^4.0.0",
         "flowbite": "^1.6.3",
+        "swiper": "^9.1.0",
         "tw-elements": "^1.0.0-beta1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
