--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "@vueuse/core": "^9.13.0",
         "flowbite": "^1.6.3",
+        "flowbite-vue": "^0.0.10",
         "pinia": "^2.0.32",
         "tw-elements": "^1.0.0-beta1",
         "vue": "^3.2.36",
