--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
         "@vueuse/core": "^9.13.0",
         "flowbite": "^1.6.3",
         "flowbite-vue": "^0.0.10",
+        "gitart-scroll-carousel": "^1.2.4",
         "pinia": "^2.0.32",
         "tw-elements": "^1.0.0-beta1",
         "vue": "^3.2.36",
         "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vue3-carousel": "^0.2.12"
     }
 }
