--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@intlify/unplugin-vue-i18n": "^0.8.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vueuse/core": "^9.13.0",
+        "animate.css": "^4.1.1",
         "flowbite": "^1.6.3",
         "flowbite-vue": "^0.0.10",
         "gitart-scroll-carousel": "^1.2.4",
