--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.11",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "1.0",
         "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
