--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue": "^3.2.36",
         "vue-i18n": "^9.2.2",
         "vue-loader": "^17.0.1",
+        "vue-number-animation": "^1.1.2",
         "vue-router": "^4.1.6",
         "vue-scrollto": "^2.20.0",
         "vue3-carousel": "^0.2.12"
