new edits frontend

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "@vueuse/core": "^9.13.0",
         "animate.css": "^4.1.1",
+        "circle-progress.vue": "^3.0.3",
         "flowbite": "^1.6.3",
         "flowbite-vue": "^0.0.10",
         "gitart-scroll-carousel": "^1.2.4",
@@ -37,6 +38,7 @@
         "vue-number-animation": "^1.1.2",
         "vue-router": "^4.1.6",
         "vue-scrollto": "^2.20.0",
-        "vue3-carousel": "^0.2.12"
+        "vue3-carousel": "^0.2.12",
+        "vue3-m-circle-progress-bar": "^0.6.1"
     }
 }
