--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "livewire/livewire": "^2.11",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "1.0",
+        "pxlrbt/filament-excel": "^1.1",
         "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
